<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CS314_GroupG_P4</string>
    <string name="action_settings">Settings</string>
    <string name="Image">Picture on Background</string>
    <string name="Start_Quiz">Start Quiz!</string>
    <string name="Title">Science Quiz!</string>
    <string name="question">Question</string>
    <string name="title_activity_test">Test</string>
    <string name="hello_world">Hello world!</string>
    <string name="answer">Answer</string>
    <string name="Answer">Answer Question</string>
    <string name="Finish">Finish Quiz</string>
    <string name="description">Finish your quiz!</string>

</resources>