<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="#34495E"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/AppTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Title"
        android:textColor="#1ABC9C"
        android:textSize="35sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/Image"
        android:src="@drawable/science" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_button"
        android:onClick="startQuiz"
        android:paddingBottom="15dp"
        android:paddingLeft="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_vertical_margin"
        android:paddingTop="15dp"
        android:text="@string/Start_Quiz"
        android:textAlignment="center"
        android:textColor="#ECF0F1"
        android:textSize="25sp"
        android:textStyle="bold"
        android:typeface="normal" />

</LinearLayout>